Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -961,7 +961,7 @@
     "missing-data-subaccount": "Daten fehlen im Unterkonto.",
     "missing-epigraph-data": "Daten fehlen im Epigraph.",
     "missing-file": "Datei fehlt",
-    "missing-file-help": "This file seems to be missing from your installation. Maybe you don't use it, but <em>you can't remove it<\/em>.",
+    "missing-file-help": "Diese Datei scheint in Ihrer Installation zu fehlen. Vielleicht nutzen Sie sie nicht, aber <em>Sie können sie nicht entfernen<\/em>.",
     "mobile": "Mobil",
     "model": "Modell",
     "model-not-found": "Modell nicht gefunden: %model%",
@@ -982,7 +982,7 @@
     "month-name": "Monatsname",
     "month-wildcard-info": "Aktueller Monat (des aktuellen Datums)",
     "monthly": "monatlich",
-    "monthly-payment": "Pago mensual",
+    "monthly-payment": "Monatliche Zahlung",
     "months": "Monate",
     "more": "Mehr",
     "more-fields": "mehr Felder",
@@ -1028,7 +1028,7 @@
     "non-editable-document": "Nicht bearbeitbares Dokument",
     "none": "Keine",
     "normal": "Normal",
-    "not-allowed-delete": "not-allowed-delete",
+    "not-allowed-delete": "Keine Berechtigung zum Löschen",
     "not-allowed-modify": "Sie haben keine Berechtigung zum Ändern",
     "not-enough-stock": "Nicht genügend Lagerbestand von %reference%",
     "not-passed-integrity-check": "Einige Dateien haben die Integritätsprüfung nicht bestanden ... <br\/>Du kannst <a class='alert-link' target='_blank' href='IntegritySystemCheck'>hier weitere Details erhalten<\/a>.",
@@ -1047,7 +1047,7 @@
     "november": "November",
     "number": "Nummer",
     "number-attachments": "Anzahl der Anhänge",
-    "number-length": "number-length",
+    "number-length": "Nummerlänge",
     "number-recipients": "Nº Empfänger",
     "number2": "Nummer 2",
     "numeric-formats": "Numerische Formate",
@@ -1108,7 +1108,7 @@
     "password": "Contraseña",
     "pattern": "Muster",
     "pattern-without-number": "Das gewählte Muster enthält keine Zahl, daher könnte es sein, dass duplikative Codes erzeugt werden.",
-    "pattern-without-serie": "El patrón elegido no incluye serie, por lo que es posible que genere códigos duplicados para cada serie",
+    "pattern-without-serie": "Das gewählte Muster enthält keine Serie, sodass es möglicherweise doppelte Codes für jede Serie generiert.",
     "pattern-without-year": "Das gewählte Muster enthält kein Geschäftsjahr oder Datum, sodass möglicherweise in jedem Geschäftsjahr doppelte Codes generiert werden.",
     "pay": "bezahlen",
     "pay-with-card": "Zahlung mit Kreditkarte",
@@ -1216,7 +1216,7 @@
     "purchase-rate": "Kaufrate",
     "purchased-quantity": "Gekaufte Menge",
     "purchases": "Käufe",
-    "purchases-subaccount-not-found": "purchases-subaccount-not-found",
+    "purchases-subaccount-not-found": "Einkaufsunterkonto nicht gefunden",
     "pvp": "Endverbraucherpreis",
     "pvp-total": "Gesamtpreis",
     "pvp-unit": "Einzelhandelspreis",
@@ -1263,7 +1263,7 @@
     "refunds": "Rückerstattungen",
     "register": "Registrieren",
     "register-install-ad": "Die Installation von FacturaScripts registrieren",
-    "register-install-ad-p": "Wenn du die Installation von FacturaScripts registrierst, erhältst du 1 Monat PRO-Sponsoring, mit dem du eines unserer exklusiven Plugins herunterladen kannst. Außerdem hilft es uns, Statistiken über Core- und PHP-Versionen zu erhalten.",
+    "register-install-ad-p": "Wenn Sie die Installation von FacturaScripts registrieren, erhalten Sie 1 Monat PRO-Sponsoring, mit dem Sie eines unserer exklusiven Plugins herunterladen können. Außerdem hilft es uns, Statistiken über Kern- und PHP-Versionen zu erstellen.",
     "register-installation": "Instalation registrieren",
     "register-installation-p": "Registrieren Sie Ihre Installation, um kostenpflichtige oder private Plugins aktualisieren zu können.",
     "register-symbol": "#",
@@ -1285,7 +1285,7 @@
     "renumber-accounting-error": "Bei der Neunummerierung der Buchungen im Geschäftsjahr %exerciseCode% ist ein Fehler aufgetreten",
     "renumber-accounting-ok": "Neunummerierung der Buchungen abgeschlossen.",
     "renumber-accounting-p": "Buchungen nach Datum von klein nach groß neu nummerieren",
-    "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
+    "renumber-invoices-p": "Nummeriere die Rechnungen nach Datum um, von klein nach groß.",
     "renumber-invoices-success": "Las facturas del ejercicio '%exercise%' han sido renumeradas correctamente",
     "repeat-new-password": "Passwort wiederholen",
     "repeat-password": "Passwort wiederholen",
@@ -1313,7 +1313,7 @@
     "rol": "Rolle",
     "role": "Rolle",
     "roles": "Rollen",
-    "rules": "Rules",
+    "rules": "Regeln",
     "run": "Ausführen",
     "running-plugin-cron": "Führe FacturaScripts Cron für das Plugin %pluginName% aus",
     "sales": "Der Umsatz",
@@ -1344,7 +1344,7 @@
     "send-audios": "A",
     "send-documents": "Dokumente senden",
     "send-images": "Bilder senden",
-    "send-invoices": "Enviar facturas",
+    "send-invoices": "Rechnungen senden",
     "send-location": "Standort senden",
     "send-mail": "E-Mail senden",
     "send-mail-error": "Fehler beim Senden der E-Mail",
@@ -1385,7 +1385,7 @@
     "show-expired-receipts": "Abgelaufene Belege anzeigen",
     "show-month-stats": "Monatsstatistiken anzeigen",
     "show-pending-remittances": "Zeige ausstehende Überweisungen",
-    "show-price": "Show price on print",
+    "show-price": "Preis im Druck anzeigen",
     "show-quantity": "Menge bei Druck anzeigen",
     "show-section-new": "Neuen Abschnitt anzeigen",
     "signature": "Unterschrift",
@@ -1532,13 +1532,13 @@
     "timezone": "Zeitzone",
     "title": "Titel",
     "title-font-size": "Schriftgröße Titel",
-    "title-url": "Title URL",
+    "title-url": "Titel (URL)",
     "to": "Bis",
     "to-refund": "A devolver",
     "to-report": "Berichten",
     "today": "Heute",
     "total": "Gesamt",
-    "total-amount": "total-amount",
+    "total-amount": "Gesamtbetrag",
     "total-cost": "Gesamtkosten",
     "total-purchases": "Gesamteinkäufe",
     "total-sales": "Gesamtverkäufe",
