--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -751,7 +751,7 @@
     "import-accounting-plan": "Kontabilitate plana inportatu",
     "import-accounting-plan-p": "Eremu hau hutsik utzi kontabilitate plan lehenetsia erabiltzeko. Edo hautatu zure kontabilitate plan pertsonalizatua duen fitxategia.",
     "import-file": "Inportazio fitxategia",
-    "in-progress": "Aurrera doa",
+    "in-progress": "Aurrera doan",
     "in-stock": "Stockean",
     "inactive": "Ez-aktibo",
     "income-and-expenses": "Diru-sarrerak eta gastuak",
