--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -860,7 +860,7 @@
     "last-quarter": "ultimo-quartiere",
     "last-semester": "Ultimo semestre",
     "last-trimester": "L'ultimo trimestre",
-    "last-update": "last-update",
+    "last-update": "Ultimo aggiornamento",
     "last-user": "Ultimo utente",
     "last-week": "La settimana scorsa",
     "last-year": "L'anno scorso",
@@ -936,7 +936,7 @@
     "maximum-amount-with-cifnif": "Importo massimo con CIF\/NIF",
     "maximum-amount-without-cifnif": "Importo massimo senza CIF\/NIF",
     "maximum-stock": "Scorte massime",
-    "may": "Mayo",
+    "may": "Maggio",
     "mega-search": "MegaRicerca",
     "memcache": "Memcache 0",
     "memcache-clear": "Memcache cancellato.",
@@ -982,7 +982,7 @@
     "month-name": "Nome del mese",
     "month-wildcard-info": "Mese corrente (della data corrente)",
     "monthly": "Mensile",
-    "monthly-payment": "Pago mensual",
+    "monthly-payment": "Pagamento mensile",
     "months": "Mesi",
     "more": "Di più",
     "more-fields": "Altro campi",
@@ -1043,7 +1043,7 @@
     "notice": "Avviso",
     "notices": "Avvisi",
     "notification": "Notifica",
-    "notifications": "Notificaciones",
+    "notifications": "Notifiche",
     "november": "Novembre",
     "number": "Numero",
     "number-attachments": "Nº di allegati",
