--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -62,7 +62,7 @@
     "addresses-and-contacts": "Adresy i kontakty",
     "admin": "Administrator",
     "administrator": "Administrator",
-    "adult": "Adulto",
+    "adult": "Dorosły",
     "advanced": "Avanzado",
     "agent": "Agent",
     "agent-commission-info": "Dotyczy tylko wybranego agenta",
@@ -70,12 +70,12 @@
     "agents": "Agenci",
     "alert": "Alerta",
     "alerts": "Alertas",
-    "alfa-code-2": "Código alfa 2",
+    "alfa-code-2": "Kod alfa 2",
     "alfa-code-3": "Código alfa 3",
     "alias": "Pseudonim",
     "alias-general-info": "Permite dar un nombre al valor de la columna de su izquierda",
     "alias-wildcard-info": "Wartość aliasu zdefiniowanego wcześniej. Na przykład: %base%, %składka%",
-    "all": "Todos",
+    "all": "Wszystkie",
     "all-variants": "Todas las variantes",
     "allow-delete": "Zezwól na usunięcie",
     "allow-delete-data": "Zezwalaj na USUNIĘCIE",
@@ -183,7 +183,7 @@
     "cancel-data": "Anuluj zmiany lub operację",
     "cancelled": "Cancelado",
     "cannot-generate-accounting-entry": "Błąd podczas generowania księgowania faktury %invoice%",
-    "cant-assign-date-already-regularized": "No se puede asignar la fecha %date% porque ya hay una regularización de %tax% para ese periodo.",
+    "cant-assign-date-already-regularized": "Nie można przypisać daty %date%, ponieważ dla tego okresu już wprowadzono regulację %tax%.",
     "cant-assing-subaccount-supplier": "Imposible asociar la subcuenta para el proveedor %supplierCode%",
     "cant-associate-customer-subaccount": "Nie można powiązać subkonta z klientem %customerCode%",
     "cant-change-accounting-entry-exercise": "Nie można zmienić roku obrachunkowego dla wpisu. Utwórz nowy wpis.",
@@ -247,13 +247,13 @@
     "closed": "Cerrado",
     "closed-exercise": "Ćwiczenie %exerciseName% jest zamknięte.",
     "closed-exercise-cant-change-date": "El ejercicio %exerciseName% está cerrado. No se puede modificar la fecha.",
-    "closing-accounting-completed": "Ejercicio cerrado correctamente",
+    "closing-accounting-completed": "Rok obrachunkowy zakończony pomyślnie",
     "closing-closing-concept": "Asiento de cierre del ejercicio %exercise%",
     "closing-opening-concept": "Wprowadzenie otwierające ćwiczenie %exercise%",
     "closing-operation": "Zamknięcie",
     "closing-regularization-concept": "Ewidencja regulacyjna roku %exercise%",
     "codbarras": "Kod kreskowy",
-    "code": "Código",
+    "code": "Kod",
     "codiso": "Código ISO",
     "color": "Kolor",
     "color-danger": "Kolor niebezpieczeństwa",
@@ -284,7 +284,7 @@
     "company-warehouse": "Firma\/Magazyn",
     "comparative": "Comparativo",
     "compared": "Porównany",
-    "compatible": "Compatible",
+    "compatible": "Kompatybilny",
     "completed": "Zakończony",
     "component": "Komponent",
     "concept": "Concepto",
@@ -398,12 +398,12 @@
     "db-type-not-recognized": "Typ połączenia nie jest rozpoznawany. Musi być MySQL lub PostgreSQL",
     "db-user": "Usuario base de datos",
     "debit": "Debe",
-    "debug-mode": "Modo depuración",
+    "debug-mode": "Tryb debugowania",
     "december": "Diciembre",
     "decimal-separator": "Separador de decimales",
     "decimals": "Decimales",
     "default": "Por defecto",
-    "default-customer": "Cliente predefinido",
+    "default-customer": "Klient domyślny",
     "default-retention": "Domyślne zatrzymanie",
     "default-role": "Grupo de usuario pred.",
     "default-tax": "Impuesto predeterminado",
@@ -411,7 +411,7 @@
     "default-to-user-email": "Por defecto al email del usuario",
     "default-warehouse": "Domyślny magazyn",
     "delete": "Eliminar",
-    "delete-all": "Eliminar todo",
+    "delete-all": "Usuń wszystko",
     "delete-closing": "Eliminar asientos de cierre",
     "delete-data": "Usuń dane",
     "delete-file": "Eliminar archivo",
@@ -453,7 +453,7 @@
     "detail": "Szczegóły",
     "details": "Detalles",
     "difference": "Różnica",
-    "different-passwords": "Las contraseñas no coinciden para el usuario %userNick%",
+    "different-passwords": "Hasła nie pasują dla użytkownika %userNick%",
     "different-than": "Diferente que",
     "disable": "Desactivar",
     "disable-plugins": "Wyłącz wtyczki",
@@ -463,7 +463,7 @@
     "discount": "Descuento",
     "display": "Wyświetlanie",
     "display-date": "Data wyświetlania",
-    "do-not-disable-plugins": "No desactivar plugins",
+    "do-not-disable-plugins": "Nie dezaktywuj wtyczek",
     "do-not-group": "Nie grupować",
     "do-nothing": "No hacer nada",
     "doc-type": "Typ dokumentu",
@@ -547,7 +547,7 @@
     "error-saving-stock": "Błąd podczas zapisywania zapasów!",
     "error-to-innodb": "Błąd podczas konwersji tabeli do InnoDB.",
     "error-updating-product-stock": "Błąd podczas aktualizacji stanu magazynowego produktu!",
-    "errors": "Errores",
+    "errors": "Błędy",
     "es_EC": "Español (Ecuador)",
     "es-tax-exception-e1": "España: excepción por el artículo 20 de la Ley del IVA",
     "es-tax-exception-e2": "Hiszpania: wyjątek na mocy artykułu 21 ustawy o VAT",
@@ -567,7 +567,7 @@
     "es-tax-regime-telecom": "Regímenes especiales de telecomunicaciones, radiodifusión o televisión y otros",
     "es-tax-regime-travel": "Régimen especial de las agencias de viajes",
     "es-tax-regime-used-goods": "Régimen especial de los bienes usados, objetos de arte, antigüedades y objetos de colección",
-    "estimation": "Presupuesto",
+    "estimation": "Szacowanie",
     "estimation-email-subject": "Twój kosztorys %code%",
     "estimation-email-text": "Dzień dobry, załączam Twoją wycenę %code%",
     "estimations": "Szacowania",
@@ -643,19 +643,19 @@
     "for-all": "Para todos",
     "for-all-exercises": "Dla wszystkich ćwiczeń",
     "for-purchase": "Do zakupu",
-    "for-sale": "Se vende",
+    "for-sale": "Na sprzedaż",
     "foresee": "Prever",
     "format": "Format",
     "formula-cost-price": "cena kosztowa + x% + y",
     "formula-sale-price": "cena - x% - y",
-    "formula-to-apply": "Fórmula a aplicar",
-    "fourth-quarter": "4º trimestre",
+    "formula-to-apply": "Formuła do zastosowania",
+    "fourth-quarter": "4. kwartał",
     "fourth-trimester": "Cuarto trimestre",
     "free": "Gratis",
     "friday": "Viernes",
     "from": "Od",
     "from-accounting-entry": "Od pozycji",
-    "from-date": "Desde",
+    "from-date": "Od",
     "from-subaccount": "Z subkonta",
     "full-access": "Pełny dostęp",
     "full-path": "Pełna ścieżka",
@@ -670,9 +670,9 @@
     "generate-invoice": "Crear factura",
     "generate-receipts": "Generuj paragon",
     "generate-settlements": "Generuj rozliczenia",
-    "generate-test-data": "Generar datos de prueba",
+    "generate-test-data": "Generować dane testowe",
     "generate-title": "Genera el informe",
-    "generated-accounting-entries": "%quantity% asientos contables generados.",
+    "generated-accounting-entries": "Wygenerowano %quantity% wpisów księgowych.",
     "generated-accounts": "%quantity% wygenerowanych kont księgowych.",
     "generated-agents": "Wygenerowano %quantity% agentów.",
     "generated-at": "Generado el %when%",
@@ -720,10 +720,10 @@
     "heading-account-id-root": "ID padre",
     "health": "Salud",
     "height": "Alto",
-    "hello": "Hola",
+    "hello": "Cześć",
     "help": "Pomoc",
     "help-button-p": "Konsultuj pomoc na każdym ekranie",
-    "help-server-accepts-filesize": "Este servidor admite un tamaño máximo de %size% MB.",
+    "help-server-accepts-filesize": "Ten serwer obsługuje maksymalny rozmiar %size% MB.",
     "hide": "Ocultar",
     "high": "Alto",
     "high-purchase-price": "Precio más alto",
@@ -768,7 +768,7 @@
     "installer-p": "Bienvenido al instalador de FacturaScripts. Rellena los campos necesarios para conectar a la base de datos.",
     "installer-requirements": "Następujące rozszerzenia i funkcje są wymagane w FacturaScripts:",
     "integrity-check": "Kontrola integralności",
-    "integrity-check-help": "Esta es una verificación de la integridad del sistema, descrita como",
+    "integrity-check-help": "To jest sprawdzenie integralności systemu, opisane jako",
     "interest": "Interés",
     "international-identifier": "Identificación internacional",
     "intra-community": "Intracomunitaria",
@@ -802,7 +802,7 @@
     "irpf": "IRPF",
     "irpf-record-not-found": "Registro de IRPF %value%% no encontrado.",
     "irpf-subaccount-not-found": "Nie znaleziono subkonta IRPF",
-    "is-admin": "Es administrador",
+    "is-admin": "Jest administratorem",
     "is-creditor": "Jest wierzycielem",
     "is-person": "Persona física",
     "iso": "ISO",
@@ -857,7 +857,7 @@
     "last-price-estimation": "Ostatnia szacunkowa cena",
     "last-price-sale": "Ostatnia cena sprzedaży",
     "last-purchase-price": "Ostatnia cena zakupu",
-    "last-quarter": "El pasado cuatrimestre",
+    "last-quarter": "Ostatni kwartał",
     "last-semester": "Ostatni semestr",
     "last-trimester": "Ostatni kwartał",
     "last-update": "Ostatnia modyfikacja",
@@ -868,12 +868,12 @@
     "latitude-abb": "Lat",
     "ledger": "Diario",
     "left": "Lewo",
-    "level": "Nivel",
+    "level": "Poziom",
     "level-benefit-sales": "Poziom do zobaczenia korzyści",
     "level-cost-sales": "Poziom do zobaczenia kosztów",
     "level1": "Poziom 1",
     "level2": "Poziom 2",
-    "level3": "Nivel 3",
+    "level3": "Poziom 3",
     "level4": "Poziom 4",
     "liabilities": "Pasivo",
     "library": "Biblioteka",
@@ -906,7 +906,7 @@
     "logout": "Wyloguj się",
     "logout-ok": "Sesión cerrada correctamente.",
     "logs": "Dzienniki",
-    "long": "Largo",
+    "long": "Długi",
     "longitude": "Longitud",
     "longitude-abb": "Long",
     "look-for-gaps": "Szukaj luk",
@@ -986,7 +986,7 @@
     "months": "Miesiące",
     "more": "Más",
     "more-fields": "Więcej pól",
-    "more-plugins": "Más plugins...",
+    "more-plugins": "Więcej wtyczek...",
     "move-lines": "Przenieś linie",
     "movements": "Ruchy",
     "my-profile": "Mój profil",
@@ -1017,7 +1017,7 @@
     "no-data-received-form": "Ningún dato recibido por formulario",
     "no-extra-lines": "No añadir líneas extra",
     "no-gaps-found": "Nie znaleziono luk",
-    "no-invoice": "Sin factura",
+    "no-invoice": "Brak faktury",
     "no-outstanding-amount": "No hay importe pendiente",
     "no-print-permission": "Nie masz uprawnień do drukowania lub eksportowania",
     "no-reference": "Brak odniesienia",
@@ -1041,7 +1041,7 @@
     "note": "Nota",
     "notes": "Notatki",
     "notice": "Powiadomienie",
-    "notices": "Avisos",
+    "notices": "Powiadomienia",
     "notification": "Notificación",
     "notifications": "Powiadomienia",
     "november": "Noviembre",
@@ -1072,13 +1072,13 @@
     "operator": "Operador",
     "option": "Opcja",
     "optional": "opcjonalny",
-    "options": "Opciones",
+    "options": "Opcje",
     "options-button-header": "Układ i uprawnienia",
     "order": "Zamówienie",
     "order-email-subject": "Twoje zamówienie %code%",
     "order-email-text": "Dzień dobry, załączam Twoje zamówienie %code%",
     "orders": "Zamówienia",
-    "origin": "Origen",
+    "origin": "Pochodzenie",
     "origin-warehouse": "Magazyn źródłowy",
     "original": "Original",
     "original-file": "Plik oryginalny",
@@ -1125,7 +1125,7 @@
     "pct-vat": "% VAT",
     "pending": "Pendiente",
     "pending-invoices-button": "Fakt. Ptes:",
-    "pending-orders-button": "Ped. Ptes:",
+    "pending-orders-button": "Zamów. Pts:",
     "pending-reception": "Oczekujący odbiór",
     "percentage": "Porcentaje",
     "percentage-commission": "% Comisión",
@@ -1160,7 +1160,7 @@
     "plugin-order": "Zamówienie: %num%",
     "plugin-phpversion-error": "El plugin %pluginName% requiere PHP %php% o superior",
     "plugin-removal-disabled": "La eliminación de plugins está desactivada en este servidor",
-    "plugin-unsupported-version": "El plugin %pluginName% es para FacturaScripts 2017 o anteriores, pero estás usando FacturaScripts %version%",
+    "plugin-unsupported-version": "Wtyczka %pluginName% jest przeznaczona dla FacturaScripts 2017 lub wcześniejszych wersji, ale używasz FacturaScripts %version%",
     "plugin-update": "Aktualizacja wtyczki %pluginName% do wersji %version%",
     "plugins": "Plugins",
     "plugins-p": "Wtyczki umożliwiają dodawanie nowych funkcji. Aktywuj te, które potrzebujesz teraz, lub zrób to, gdy chcesz z menu administratora.",
@@ -1168,7 +1168,7 @@
     "points-of-interest": "Punkty zainteresowań",
     "port": "Port",
     "position": "Cargo",
-    "positive-balance": "Saldo positivo",
+    "positive-balance": "Dodatnie saldo",
     "post-office-box": "Apartado",
     "postgresql": "PostgreSQL",
     "precio": "Cena",
@@ -1195,8 +1195,8 @@
     "printing-format": "Format druku",
     "printing-formats": "Formaty druku",
     "priority": "Prioridad",
-    "private": "Privado",
-    "private-key": "Clave privada",
+    "private": "Prywatny",
+    "private-key": "Klucz prywatny",
     "process": "Proces",
     "processing": "Przetwarzanie",
     "product": "Produkt",
@@ -1221,7 +1221,7 @@
     "pvp-total": "Cena całkowita",
     "pvp-unit": "Jednostkowa cena detaliczna",
     "pvpsindto-line-error": "Error en el valor de 'pvpsindto' de la línea %reference% del documento. Valor correcto: %totalWithoutDiscount%",
-    "pvptotal-line-error": "Error en el valor de 'pvptotal' de la línea %reference% del documento. Valor correcto: %total%",
+    "pvptotal-line-error": "Błąd w wartości 'pvptotal' linii %reference% dokumentu. Prawidłowa wartość: %total%",
     "quantity": "Cantidad",
     "quantity-abb": "Ilość",
     "quantity-remaining": "Cantidad restante",
@@ -1260,7 +1260,7 @@
     "refresh-page": "Recargar página",
     "refund-amount": "Cantidad devuelta",
     "refund-payment-concept": "Devolución del recibo %document%",
-    "refunds": "Devoluciones",
+    "refunds": "Zwróty",
     "register": "Registrar",
     "register-install-ad": "Registra la instalación de FacturaScripts",
     "register-install-ad-p": "Jeśli zarejestrujesz instalację FacturaScripts, otrzymasz 1 miesiąc sponsoringu PRO, który pozwala na pobranie jednej z naszych ekskluzywnych wtyczek. Pomaga nam także uzyskać statystyki dotyczące wersji rdzenia i PHP.",
@@ -1373,13 +1373,13 @@
     "settlement-product": "Producto de liquidación",
     "settlements": "Rozliczenia",
     "setup-options": "Konfiguracja opcji",
-    "shipping": "Envío",
+    "shipping": "Wysyłka",
     "shipping-address": "Adres dostawy",
     "shop": "Sklep",
     "shops": "Tiendas",
     "short": "Corto",
     "short-name": "Krótka nazwa",
-    "show": "Mostrar",
+    "show": "Pokaż",
     "show-balance-graphic": "Mostrar gráficos en asientos",
     "show-crm-warnings": "Pokaż ostrzeżenia CRM",
     "show-expired-receipts": "Mostrar recibos vencidos",
@@ -1565,7 +1565,7 @@
     "type-emergency": "Typ awaryjny",
     "type-error": "Tipo error",
     "type-info": "Tipo info",
-    "type-notice": "Tipo aviso",
+    "type-notice": "Typ powiadomienia",
     "type-success": "Typ poprawny",
     "type-warning": "Tipo advertencia",
     "unbalance": "Descuadre",
@@ -1580,7 +1580,7 @@
     "unlink": "Desvincular",
     "unlink-file": "Odłącz plik",
     "unlink-install-ok": "Instalación borrada del registro correctamente.",
-    "unlock-entry": "Desbloquear",
+    "unlock-entry": "Odblokować",
     "unpaid": "Nieopłacone",
     "until-accounting-entry": "Hasta asiento",
     "until-date": "Do",
@@ -1637,7 +1637,7 @@
     "warehouse-cant-be-same": "Magazyn źródłowy i docelowy nie mogą być takie same.",
     "warehouse-must-be-same-business": "Los almacenes de origen y destino deben ser de la misma empresa",
     "warehouses": "Almacenes",
-    "warning": "Atención",
+    "warning": "Uwaga",
     "warnings": "Ostrzeżenia",
     "web": "Strona internetowa",
     "website": "Strona internetowa",
@@ -1666,11 +1666,11 @@
     "x-operation": "Operación sobre X",
     "y-column": "Kolumna Y",
     "year": "Año",
-    "year-wildcard-info": "Año actual (de la fecha actual)",
+    "year-wildcard-info": "Bieżący rok (na podstawie daty bieżącej)",
     "yearly": "Anual",
     "years": "Lata",
     "yes": "Tak",
-    "yesterday": "Ayer",
+    "yesterday": "Wczoraj",
     "you-cant-delete-primary-variant": "No puedes eliminar la variante principal del producto",
     "you-sent-a-audio": "Enviaste un audio",
     "you-sent-a-document": "Enviaste un documento",
