--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -255,7 +255,7 @@
     "codbarras": "Código de barras",
     "code": "Código",
     "codiso": "Código ISO",
-    "color": "cor",
+    "color": "Cor",
     "color-danger": "Cor perigo",
     "color-dark": "Cor escura",
     "color-info": "Cor info",
@@ -459,7 +459,7 @@
     "disable-plugins": "Desativar plugins",
     "disabled": "Desativado",
     "disabled-plugins": "Plugins desativados",
-    "discharge-date": "Data de descarga: 0",
+    "discharge-date": "Data de descarga: %date%",
     "discount": "Desconto",
     "display": "Visualização",
     "display-date": "F. Exibição",
@@ -491,7 +491,7 @@
     "download-xml": "Baixar XML",
     "downloads": "Downloads",
     "drag": "Arrastar",
-    "dto": "Disco.",
+    "dto": "Desconto",
     "dto-2": "Dto. 2",
     "duplicate-record": "Registro duplicado",
     "duplicated-reference": "Referência '%reference%' duplicada",
@@ -669,7 +669,7 @@
     "generate-doc-type": "Gerar tipo de documento",
     "generate-invoice": "Gerar fatura",
     "generate-receipts": "Gerar recibos",
-    "generate-settlements": "generate-settlements",
+    "generate-settlements": "Gerar liquidações",
     "generate-test-data": "Gerar dados de teste",
     "generate-title": "Criar Relatório",
     "generated-accounting-entries": "%quantity% lançamentos contábeis gerados.",
@@ -681,7 +681,7 @@
     "generated-customer-estimations": "%quantity% orçamentos de cliente gerados.",
     "generated-customer-groups": "0 grupos de clientes gerados.",
     "generated-customer-orders": "0 ordens de clientes geradas.",
-    "generated-customers": "0 clientes gerados.",
+    "generated-customers": "%quantity% clientes gerados.",
     "generated-families": "%quantity% famílias geradas.",
     "generated-invoice": "Fatura gerada",
     "generated-manufacturers": "%quantity% fabricantes gerados.",
@@ -699,7 +699,7 @@
     "group-accounts": "Agrupar contas",
     "group-by-day": "Agrupar por dia",
     "group-by-day-unixtime": "Agrupar por dia - unixtime",
-    "group-by-month": "group-by-month",
+    "group-by-month": "Agrupar por mês",
     "group-by-month-unixtime": "Agrupar por mês (unixtime)",
     "group-by-subaccount": "Agrupar por subconta",
     "group-by-week": "Agrupar por semana",
@@ -772,7 +772,7 @@
     "interest": "Interesse",
     "international-identifier": "Identificador internacional",
     "intra-community": "Intra-comunitária",
-    "invalid-alphanumeric-code": "invalid-alphanumeric-code",
+    "invalid-alphanumeric-code": "O código inserido (%value%) não é válido. (%column%) deve ter entre %min% e %max% números ou letras, sem espaços, acentos ou outros caracteres.",
     "invalid-column-lenght": "%column% deve ter entre %min% e %max% caracteres.",
     "invalid-date": "Data inválida 0.",
     "invalid-date-there-are-invoices-after": "Data inválida: %date%. A fatura %other% é posterior e mesmo assim tem data anterior: %other-date%. Toda fatura deve ter data anterior ou igual à seguinte.",
@@ -792,7 +792,7 @@
     "invoice-number": "Número da fatura",
     "invoice-receipts-diff": "Há uma diferença (%diff%) entre o valor da fatura e a soma de seus recibos.",
     "invoice-regularized-cant-change-date": "A fatura está dentro de uma regularização de %tax%. A data não pode ser modificada.",
-    "invoice-regularized-cant-delete": "A fatura está dentro de uma regularização de 0. Ele não pode ser excluído.",
+    "invoice-regularized-cant-delete": "A fatura está dentro de uma regularização de %tax%. Não pode ser excluída.",
     "invoice-without-acc-entry": "Fatura sem lançamento",
     "invoiced": "faturado",
     "invoices": "Faturas",
@@ -878,7 +878,7 @@
     "liabilities": "Passivo",
     "library": "Biblioteca",
     "license": "Licença",
-    "like-than": "Mais do que",
+    "like-than": "Igual a",
     "line": "Linha",
     "lines": "Linhas",
     "linux": "Linux",
@@ -908,7 +908,7 @@
     "logs": "Logs",
     "long": "Longo",
     "longitude": "Longitude",
-    "longitude-abb": "Long",
+    "longitude-abb": "Longitude",
     "look-for-gaps": "Buscar lacunas",
     "lot": "Lote",
     "low-security": "Baixa Segurança",
@@ -1066,7 +1066,7 @@
     "open-exercise": "Abrir exercício",
     "open-tab": "Abrir numa nova aba",
     "opened": "Aberto",
-    "opening-acounting-completed": "opening-acounting-completed",
+    "opening-acounting-completed": "Abertura de exercício correta",
     "opening-operation": "Abertura",
     "operation": "Operação",
     "operator": "Operador",
@@ -1371,7 +1371,7 @@
     "settings": "Configurações",
     "settlement": "Liquidação",
     "settlement-product": "Produto de liquidação",
-    "settlements": "settlements",
+    "settlements": "Liquidações",
     "setup-options": "Opções de configuração",
     "shipping": "Envio",
     "shipping-address": "Endereço de entrega",
@@ -1424,7 +1424,7 @@
     "status": "Status",
     "status-document": "Status do documento",
     "status-name-valid-length": "Nome de status inválido. Deve ter entre 1 e 20 caracteres.",
-    "status-value-is-number": "El campo estado deve ser numérico.",
+    "status-value-is-number": "O campo estado deve ser numérico.",
     "stock": "Estoque",
     "stock-transfer": "Transferência de stock",
     "stock-transfers": "Transferências de estoque",
@@ -1678,7 +1678,7 @@
     "you-sent-a-picture": "Você enviou uma imagem",
     "you-sent-a-video": "Você enviou um vídeo",
     "you-should-change-passwd": "deveria-mudar-senha",
-    "your": "your",
+    "your": "Seu",
     "zip-code": "Código Postal",
     "zip-codes": "Códigos postais",
     "zip-error-wrong-structure": "zip-error-wrong-structure"
