--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -255,7 +255,7 @@
     "codbarras": "Código de barras",
     "code": "Código",
     "codiso": "Código ISO",
-    "color": "cor",
+    "color": "Cor",
     "color-danger": "Cor perigo",
     "color-dark": "Cor da escuridão",
     "color-info": "Color info",
@@ -264,7 +264,7 @@
     "color-secondary": "Cor secundária",
     "color-success": "Color éxito",
     "color-warning": "Color advertencia",
-    "colors": "colors",
+    "colors": "Cores",
     "column": "Coluna",
     "columns": "Colunas",
     "combination-code": "Código de combinação",
@@ -316,7 +316,7 @@
     "copy": "Copiar",
     "copy-p": "Preencha o formulário antes de fazer a cópia deste modelo",
     "copy-subaccounts": "Copiar plano de contas",
-    "core-update": "core-update",
+    "core-update": "Atualização do núcleo para a versão %version%",
     "core-update-warning": "Advertencias de actualización",
     "correct": "Correto",
     "cost": "Custo",
@@ -550,7 +550,7 @@
     "errors": "Erros",
     "es_EC": "es_EC",
     "es-tax-exception-e1": "E",
-    "es-tax-exception-e2": "España: excepción por el artículo 21 de la Ley del IVA",
+    "es-tax-exception-e2": "Espanha: exceção pelo artigo 21 da Lei do IVA",
     "es-tax-exception-e3": "Espanha: exceção pelo artigo 22 da Lei do IVA",
     "es-tax-exception-e4": "Espanha: exceção do artigo 23 e 24 da Lei do IVA",
     "es-tax-exception-e5": "Espanha: exceção pelo artigo 25 da Lei do IVA",
@@ -710,7 +710,7 @@
     "group-name": "Nome do Grupo",
     "group-or-split": "Agrupar ou dividir",
     "group-or-split-p": "Este assistente permite gerar um novo documento a partir das linhas de outros. Selecione as quantidades que deseja usar, a data do novo documento e pressione o botão gerar.",
-    "grouping-type": "Agrupación",
+    "grouping-type": "Agrupamento",
     "groups": "Grupos",
     "has-attachments": "Tem anexos",
     "has-parent": "Tem pai",
@@ -729,7 +729,7 @@
     "high-purchase-price": "Preço de compra mais alto",
     "hint-create-accounting-entry": "Criar o lançamento contábil para a regularização dos impostos do período",
     "hint-vat-register": "View\/Modify VAT registration",
-    "history": "Historial",
+    "history": "Histórico",
     "homepage": "Página inicial",
     "host": "Hospedeiro",
     "hour": "Hora",
@@ -790,7 +790,7 @@
     "invoice-have-rectifying-cant-delete": "A factura já possui uma retificação. Não pode ser excluído.",
     "invoice-new-assigned-date": "Há invocados com maior data (0). Nova data atribuída: 1",
     "invoice-number": "Número da factura",
-    "invoice-receipts-diff": "Hay una diferencia (%diff%) entre el importe de la factura y la suma de sus recibos.",
+    "invoice-receipts-diff": "Há uma diferença (%diff%) entre o valor da fatura e a soma dos seus recibos.",
     "invoice-regularized-cant-change-date": "A fatura está dentro de uma regularização de 0. A data não pode ser modificada.",
     "invoice-regularized-cant-delete": "A fatura está dentro de uma regularização de 0. Ele não pode ser excluído.",
     "invoice-without-acc-entry": "Fatura sem lançamento",
@@ -811,7 +811,7 @@
     "items-added-correctly": "%num% itens adicionados corretamente",
     "items-removed-correctly": "%num% elementos removidos corretamente",
     "ivarep-subaccount-not-found": "Subconta de IVA repercutido não encontrada",
-    "ivasop-account-not-found": "ivasop-account-not-found",
+    "ivasop-account-not-found": "Conta de IVA suportado não encontrada",
     "january": "Enero",
     "job-name": "Nome do Trabalho",
     "journal": "Diário",
@@ -936,7 +936,7 @@
     "maximum-amount-with-cifnif": "Máximo valor com CIF\/NIF",
     "maximum-amount-without-cifnif": "Valor máximo sem CIF\/NIF",
     "maximum-stock": "Estoque máximo",
-    "may": "Mayo",
+    "may": "Maio",
     "mega-search": "MegaBuscador",
     "memcache": "Memcache 0",
     "memcache-clear": "Memcache foi limpo.",
@@ -968,7 +968,7 @@
     "monday": "segunda-feira",
     "month": "Mes",
     "month-1": "Janeiro",
-    "month-10": "Octubre",
+    "month-10": "Outubro",
     "month-11": "Novembro",
     "month-12": "Dezembro",
     "month-2": "Fevereiro",
@@ -1000,7 +1000,7 @@
     "negative-balance": "Saldo Negativo",
     "net": "Líquido",
     "new": "Novo",
-    "new-acc-entry-line-p": "Puedes introducir una línea escribiendo el código de la subcuenta debajo o pulsando el botón subcuentas y seleccionando una subcuenta.",
+    "new-acc-entry-line-p": "Pode introduzir uma linha escrevendo o código da subconta abaixo ou pressionando o botão subcontas e selecionando uma subconta.",
     "new-address": "Nueva traducción",
     "new-customer": "Novo Cliente",
     "new-customers": "Novos Clientes",
@@ -1035,7 +1035,7 @@
     "not-public": "Não público",
     "not-stored-content": "Conteúdo não armazenado",
     "not-valid-email": "%email% não é um email válido",
-    "not-valid-fiscal-number": "not-valid-fiscal-number",
+    "not-valid-fiscal-number": "O %type% %number% não é válido",
     "not-valid-image": "Não é uma imagem válida",
     "not-valid-percentage-retention": "Not valid percentage retention",
     "note": "Nota",
@@ -1047,7 +1047,7 @@
     "november": "Novembro",
     "number": "Número",
     "number-attachments": "Nº de anexos",
-    "number-length": "number-length",
+    "number-length": "Comprimento do número",
     "number-recipients": "Nº perceptores",
     "number2": "Número 2",
     "numeric-formats": "Formatos numéricos",
@@ -1078,7 +1078,7 @@
     "order-email-subject": "O seu pedido %code%",
     "order-email-text": "Olá, vai anexo a sua Nota de Encomenda\/Pedido %code%",
     "orders": "Pedidos",
-    "origin": "origin",
+    "origin": "Origem",
     "origin-warehouse": "Armazém de origem",
     "original": "original",
     "original-file": "Arquivo original",
@@ -1219,7 +1219,7 @@
     "purchases-subaccount-not-found": "purchases-subaccount-not-found",
     "pvp": "Preço de varejo",
     "pvp-total": "Preço total de varejo",
-    "pvp-unit": "Unit retail price",
+    "pvp-unit": "Preço de venda ao público unitário",
     "pvpsindto-line-error": "Erro no valor de pvpsindto da linha 0 do documento. Valor correto: 1",
     "pvptotal-line-error": "Erro no valor pvptotal da linha 0 do documento. Valor correto: 1",
     "quantity": "Quantidade",
@@ -1236,7 +1236,7 @@
     "read-message-by": "Lido por %nick% em %date%",
     "read-more": "Leer más",
     "readonly": "Apenas leitura",
-    "rebuild": "rebuild",
+    "rebuild": "Reconstruir",
     "rebuild-completed": "Reconstrução concluída",
     "rebuild-stock": "reconstruir-estoque",
     "receipt": "recibo",
@@ -1263,7 +1263,7 @@
     "refunds": "Reembolsos",
     "register": "Registrar",
     "register-install-ad": "Registar a instalação do FacturaScripts",
-    "register-install-ad-p": "Si registras la instalación de FacturaScripts obtendrás 1 mes de patrocinio PRO, que te permite descargar uno de nuestros plugins exclusivos. Además nos ayuda obtener estadísticas de versiones del core y de PHP.",
+    "register-install-ad-p": "Se registrar a instalação do FacturaScripts, obterá 1 mês de patrocínio PRO, que lhe permite baixar um dos nossos plugins exclusivos. Além disso, ajuda-nos a obter estatísticas das versões do core e do PHP.",
     "register-installation": "Registrar instalação",
     "register-installation-p": "Registe a sua instalação para poder atualizar plugins pagos ou privados.",
     "register-symbol": "#",
@@ -1393,7 +1393,7 @@
     "simplified": "Simplificada",
     "size": "size",
     "sketch": "Esboço",
-    "sketch-invoice-warning": "Esta factura todavía es un boceto. Hágala oficial cambiado su estado a emitida.",
+    "sketch-invoice-warning": "Esta fatura ainda é um rascunho. Torne-a oficial alterando seu estado para emitido.",
     "small": "Pequeno",
     "smaller-than": "Menor que",
     "soap-extension-not-installed": "A extensão SOAP não está instalada em PHP. Entre em contato com seu provedor de hospedagem para ativá-la.",
@@ -1444,7 +1444,7 @@
     "subaccount-not-found": "Subconta 0 não encontrado.",
     "subaccount-purchases": "Conta para compras",
     "subaccount-pyg-not-found": "subconta-pyg-não-encontrada",
-    "subaccount-sales": "Cuenta de ventas",
+    "subaccount-sales": "Conta de vendas",
     "subaccounts": "Subcontas",
     "subfamilies": "s",
     "subject": "Assunto",
@@ -1600,7 +1600,7 @@
     "use-gaps": "Usar intervalos",
     "use-holes-invoices-esp": "Si desmarcas el uso de huecos en facturas y eliminas alguna se quedará el hueco en la facturación y tendrás problemas con hacienda",
     "user": "Do utilizador",
-    "user-and-config": "Usuario y configuración",
+    "user-and-config": "Utilizador e configuração",
     "users": "Comercial",
     "using-apc": "Usando cache APC",
     "using-filecache": "Usando Filecache",
